@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020140226"
-#define public MagickPackageReleaseDate "snapshot-20140226"
+#define public MagickPackageVersionAddendum ".020140305"
+#define public MagickPackageReleaseDate "snapshot-20140305"
