@@ -1,3 +1,8 @@
+2014-03-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/studio.h: Make sure that Windows _aligned_malloc() is not
+	used under MinGW unless the CRT version allows it.
+
 2014-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/pixel_cache.c (InterpolateViewColor): Applied patch by
